Fix wonky code shrinking on mobile safari

--- a/themes/ath-tufte-hugo_archivo/static/theme/css/tufte.css
+++ b/themes/ath-tufte-hugo_archivo/static/theme/css/tufte.css
@@ -173,6 +173,7 @@ body {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 0.85rem;
     line-height: 1.71428571;
+    -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. See https://github.com/edwardtufte/tufte-css/issues/81#issuecomment-261953409 */
     margin-top: 1rem; }
   .wrap h1 code, .wrap h2 code, .wrap h3 code {
     font-size: 0.80em; }
